@@ -1,3 +1,9 @@
+2010-11-15  Werner Koch  <wk@g10code.com>
+
+	* conf-w32ce-msc/build.mk (copy-static-source): Create stdint.h.
+	(all): Add ws2.lib
+	(clean): New.
+
 2010-11-02  Werner Koch  <wk@g10code.com>
 
 	* conf-w32ce-msc/build.mk: Change directory layout.
